= Changelog


== master

* ADDED: `canonical_link_tag` helper provides the ability to generate Canonical Link tags used by search engine crawlers to determine the preferred url for a page (closes #255).


== Release 0.5.0

* REMOVED: `sidebar` helper. It was nothing special and just a wrapper for a simple Rails execution.


== Release 0.4.0

* ADDED: `javascript` and `stylesheet` helpers.

* FIXED: GitHub now requires the Manifest file to be included in the repos.


== Release 0.3.1

* FIXED: `javascript_content_for` doesn't properly concat output when called with block (closes #183).


== Release 0.3.0

* ADDED: Added `javascript_content_for helper`. `javascript_content_for` combines the features of `content_for` and `javascript_tag` (closes #149).

* FIXED: `has_content?` raises an error when has_content isn't initialized (closes #179).

* CHANGED: Changed status to alpha and removed development warning (closes #151).


== Release 0.2.2

* FIXED: The "Unhandled special" error message for real!


== Release 0.2.1

* FIXED: RubyGems fails to generate the documentation with the following error message "Unhandled special".


== Release 0.2.0

* ADDED: Added Helperful::ContentHelper module (subsequently renamed to Helperful::ContentHelper) with #sidebar helper for passing content_for :sidebar to the layout. Even if this is a really simple method, this method adds a bit of semantic meaning to common application usage of content_for for created sidebars.

* ADDED: Added HelperfulAffiliationsHelper module (subsequently renamed to Helperful::AffiliationsHelper).

* ADDED: Added HelperfulAffiliationsHelper#tradedoubler_verification_tag helper for generating Tradedoubler verifications tags (subsequently renamed to Helperful::AffiliationsHelper).

* ADDED: Added #helperful method as shortcut for including helper modules from the Helperful namespace.

* ADDED: Packaged library as a GEM.
