@@ -3,6 +3,12 @@
 Helperful aims to be a collection of useful and reusable Rails helpers.
 
 
+== Requirements
+
+* Ruby >= 1.8.6
+* Rails >= 2.2.x (tested up to Rails 2.3.3)
+
+
 == Plugin Installation
 
 === As a Gem
